--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -168,16 +168,13 @@ iframe {
     position: fixed;
     right: 10vw;
     top: 10vh;
-    background-color:rgba(255,255,255,0.35);
+    background-color:rgba(0,0,0,0.5);
     border-radius: 16px;
 }
 
-.container-login100:hover{
-    background-color:rgba(0,0,0,0.5);
-}
 
 .wrap-login100 {
-    width: 500px;
+    width: 200%;
     /*background: transparent;*/
     /*position: fixed;*/
     z-index: 10;
@@ -185,8 +182,13 @@ iframe {
     /*opacity: 0.0;*/
     border-radius: 10px;
     overflow: hidden;
+    position: relative;
+    text-indent: 2em;
 }
 
+#regist{
+    margin-left: -100%;
+}
 
 /*------------------------------------------------------------------
 [ Form ]*/
@@ -331,6 +333,7 @@ iframe {
     border-radius: 25px;
     overflow: hidden;
     margin: 0 auto;
+    margin-top: 40px;
 
     box-shadow: 0 5px 30px 0px rgba(3, 216, 222, 0.2);
     -moz-box-shadow: 0 5px 30px 0px rgba(3, 216, 222, 0.2);
@@ -483,3 +486,50 @@ iframe {
         padding-right: 15px;
     }
 }
+
+
+.register{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    font-size: 0;
+
+}
+
+.register-li{
+    list-style: none;
+    width: 50%;
+    height: 100%;
+    margin: 0 auto;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.header-anchor {
+    display: none;
+}
+.header-item {
+    display: inline-block;
+    width: 100%;
+    height: 40px;
+    line-height: 30px;
+    text-align: center;
+    cursor: pointer;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 14px;
+    padding-bottom: 6px;
+
+}
+.header-anchor:checked ~ .wrap-login100 {
+    /*visibility: hidden;*/
+    display: none;
+}
+
+.header-anchor:checked ~ .header-item {
+    border-bottom: rgba(255,255,255,0.5);
+    border-bottom-style: solid;
+    font-size: 16px;
+}
+
