--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,58 +64,76 @@
         </div>
 
         <div class="container-login100">
-            <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-                <form class="login100-form validate-form">
-                    <span class="login100-form-title p-b-49">登录</span>
+            <ul class="register">
+                <li class="register-li">
+                    <input class="header-anchor" name="nav" type="radio" id="tab1" checked>
+                    <label class="header-item" for="tab1">登 陆</label>
+                    <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+                        <form class="login100-form validate-form">
+                            <span class="login100-form-title p-b-49">注册</span>
+                            <div class="wrap-input100 validate-input" data-validate="请输入账号">
+                                <span class="label-input100">账号</span>
+                                <input class="input100" type="text" name="username" placeholder="请输入账号" autocomplete="off">
+                                <!--<span class="focus-input100" data-symbol="123"></span>-->
+                                <span class="focus-input100" style="background-image: url(icon/account.png);background-repeat: no-repeat;background-size: 24px 24px;background-position-x: 4%;background-position-y: 70%"></span>
+                            </div>
 
-                    <div class="wrap-input100 validate-input m-b-23" data-validate="请输入用户名">
-                        <span class="label-input100">用户名</span>
-                        <input class="input100" type="text" name="username" placeholder="请输入用户名" autocomplete="off">
-                        <!--<span class="focus-input100" data-symbol="123"></span>-->
-                        <span class="focus-input100" style="background-image: url(icon/account.png);background-repeat: no-repeat;background-size: 24px 24px;background-position-x: 4%;background-position-y: 70%"></span>
+                            <div class="wrap-input100 validate-input" data-validate="请输入姓名">
+                                <span class="label-input100">姓名</span>
+                                <input class="input100" type="text" name="name" placeholder="请输入姓名">
+                                <!--<span class="focus-input100" data-symbol="123"></span>-->
+                                <span class="focus-input100" style="background-image: url(icon/nameicon.png);background-repeat: no-repeat;background-size: 24px 24px;background-position-x: 4%;background-position-y: 70%"></span>
+                            </div>
+
+                            <div class="wrap-input100 validate-input" data-validate="请输入密码">
+                                <span class="label-input100">密码</span>
+                                <input class="input100" type="password" name="pass" placeholder="请输入密码">
+                                <!--<span class="focus-input100" data-symbol="123"></span>-->
+                                <span class="focus-input100" style="background-image: url(icon/password.png);background-repeat: no-repeat;background-size: 24px 24px;background-position-x: 4%;background-position-y: 70%"></span>
+                            </div>
+                            <div class="container-login100-form-btn">
+                                <div class="wrap-login100-form-btn">
+                                    <div class="login100-form-bgbtn"></div>
+                                    <button class="login100-form-btn">注 册</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
+                </li>
+                <li class="register-li">
+                    <input class="header-anchor" name="nav" type="radio" id="tab2">
+                    <label class="header-item" for="tab2">注 册</label>
+                    <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54" id="regist">
+                        <form class="login100-form validate-form">
+                            <span class="login100-form-title p-b-49">登陆</span>
+                            <div class="wrap-input100 validate-input m-b-23" data-validate="请输入账号">
+                                <span class="label-input100">账号</span>
+                                <input class="input100" type="text" name="username" placeholder="请输入账号" autocomplete="off">
+                                <!--<span class="focus-input100" data-symbol="123"></span>-->
+                                <span class="focus-input100" style="background-image: url(icon/account.png);background-repeat: no-repeat;background-size: 24px 24px;background-position-x: 4%;background-position-y: 70%"></span>
+                            </div>
 
-                    <div class="wrap-input100 validate-input" data-validate="请输入密码">
-                        <span class="label-input100">密码</span>
-                        <input class="input100" type="password" name="pass" placeholder="请输入密码">
-                        <!--<span class="focus-input100" data-symbol="123"></span>-->
-                        <span class="focus-input100" style="background-image: url(icon/password.png);background-repeat: no-repeat;background-size: 24px 24px;background-position-x: 4%;background-position-y: 70%"></span>
+                            <div class="wrap-input100 validate-input m-b-23" data-validate="请输入密码">
+                                <span class="label-input100">密码</span>
+                                <input class="input100" type="password" name="pass" placeholder="请输入密码">
+                                <!--<span class="focus-input100" data-symbol="123"></span>-->
+                                <span class="focus-input100" style="background-image: url(icon/password.png);background-repeat: no-repeat;background-size: 24px 24px;background-position-x: 4%;background-position-y: 70%"></span>
+                            </div>
+
+                            <div class="text-right p-t-8 p-b-31">
+                                <a href="javascript:" class="txt1">忘记密码？</a>
+                            </div>
+
+                            <div class="container-login100-form-btn">
+                                <div class="wrap-login100-form-btn">
+                                    <div class="login100-form-bgbtn"></div>
+                                    <button class="login100-form-btn">登 录</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-
-                    <div class="text-right p-t-8 p-b-31">
-                        <a href="javascript:" class="txt1">忘记密码？</a>
-                    </div>
-
-                    <div class="container-login100-form-btn">
-                        <div class="wrap-login100-form-btn">
-                            <div class="login100-form-bgbtn"></div>
-                            <button class="login100-form-btn">登 录</button>
-                        </div>
-                    </div>
-
-                    <!--<div class="txt1 text-center p-t-54 p-b-20">-->
-                        <!--<span>第三方登录</span>-->
-                    <!--</div>-->
-
-                    <!--<div class="flex-c-m">-->
-                        <!--<a href="#" class="login100-social-item bg1">-->
-                            <!--<i class="fa fa-wechat"></i>-->
-                        <!--</a>-->
-
-                        <!--<a href="#" class="login100-social-item bg2">-->
-                            <!--<i class="fa fa-qq"></i>-->
-                        <!--</a>-->
-
-                        <!--<a href="#" class="login100-social-item bg3">-->
-                            <!--<i class="fa fa-weibo"></i>-->
-                        <!--</a>-->
-                    <!--</div>-->
-
-                    <div class="flex-col-c p-t-25">
-                        <a href="javascript:" class="txt2">立即注册</a>
-                    </div>
-                </form>
-            </div>
+                </li>
+            </ul>
         </div>
     </div>
 </main>
