加入了验证码

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -425,7 +425,7 @@ iframe {
 }
 
 .alert-validate::after {
-    content: "\f06a";
+    content: " X";
     font-family: FontAwesome;
     display: block;
     position: absolute;
