--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -134,7 +134,10 @@
                             <div class="container-login100-form-btn">
                                 <div class="wrap-login100-form-btn">
                                     <div class="login100-form-bgbtn"></div>
-                                    <button class="login100-form-btn">登 录</button>
+                                    <a th:href="@{/login}">
+                                        <!--<button class="login100-form-btn" type="button">登 录</button>-->
+                                        <button class="login100-form-btn" type="button">登 录</button>
+                                    </a>
                                 </div>
                             </div>
                         </form>
