--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,6 +5,7 @@
     <title>大学生协同出游</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/dot.css"/>
 </head>
 <body class="page-front">
 <div>
@@ -18,10 +19,21 @@
                         </div>
                         <div class="slick-slide" style="width: 100%;">
                             <a class="block relative" href="#" tabindex="-1">
-                                <img src="images/kv-0.jpg" class="tablet-block mobile-hidden">
+                                <img src="images/1.jpg" class="tablet-block mobile-hidden">
                             </a>
                         </div>
                     </div>
+                </div>
+                <div class="nav_dot">
+                    <ul class="nav_container">
+                        <li class="nav_previous"></li>
+                        <li class="dot"></li>
+                        <li class="dot"></li>
+                        <li class="dot"></li>
+                        <li class="dot"></li>
+                        <li class="dot"></li>
+                        <li class="nav_next"></li>
+                    </ul>
                 </div>
             </div>
         </section>
