添加活动详情页面

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -40,13 +40,13 @@
         <section class="promotion">
             <div class="wrapper fluid">
                 <div class="grid columns-3 padded-2">
-                    <a href="#" target="_blank">
+                    <a href="/detail" target="_blank">
                         <img src="images/starbucks-tmall-0102-cn.jpg">
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="/detail" target="_blank">
                         <img src="images/starbucks-design-studio-web-china.jpg">
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="/detail" target="_blank">
                         <img src="images/homepage-career-cn.jpg">
                     </a>
                 </div>
@@ -58,13 +58,13 @@
                 <p class="light wrapper-mobile">在星巴克天猫旗舰店发现更多咖啡心意</p>
                 <ul class="grid columns-4 padded-2">
                     <li>
-                        <a href="#" target="_blank" class="tablet-block mobile-hidden">
+                        <a href="/detail" target="_blank" class="tablet-block mobile-hidden">
                             <img src="images/tmall-card-01.png">
                             <p class="title-1"><strong>会员星礼包</strong></p>
                             <p class="margin2">星享卡新升级<br>更多心意好礼</p>
                             <p class="caption">了解更多 ›</p>
                         </a>
-                        <a href="#" target="_blank" class="show-mobile tablet-hidden">
+                        <a href="/detail" target="_blank" class="show-mobile tablet-hidden">
                             <img src="images/tmall-card-01.png">
                             <p class="title-1"><strong>会员星礼包</strong></p>
                             <p class="margin2">星享卡新升级<br>更多心意好礼</p>
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" target="_blank">
+                        <a href="/detail" target="_blank">
                             <img src="images/tmall-card-02.png">
                             <p class="title-1"><strong>星礼卡</strong></p>
                             <p class="margin2">用一份心礼<br>让心意相随</p>
@@ -80,7 +80,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" target="_blank">
+                        <a href="/detail" target="_blank">
                             <img src="images/tmall-eticket.png">
                             <p class="title-1"><strong>电子产品券</strong></p>
                             <p class="margin2">心意<br>从这一杯开始</p>
@@ -88,7 +88,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" target="_blank">
+                        <a href="/detail" target="_blank">
                             <img src="images/tmall-reserve.png">
                             <p class="title-1"><strong>咖啡生活</strong></p>
                             <p class="margin2">星巴克<br>用心制作</p>
@@ -107,21 +107,21 @@
                 <!--<div class="scroll">-->
                     <div class="wrapper" style="text-align:center">
                         <div>
-                            <a target="_blank" href="#" class="thumbnail rect card">
+                            <a target="_blank" href="/detail" class="thumbnail rect card">
                                 <div class="preview" style="background-image: url(images/starbucks-tmall-0102-cn.jpg)"></div>
                                 <span class="tag">咖啡知识</span>
                                 <strong>咖啡的起源与培植</strong> </a>
-                            <a target="_blank" href="#" class="thumbnail rect card">
+                            <a target="_blank" href="/detail" class="thumbnail rect card">
                                 <div class="preview" style="background-image: url(./css/starbucks-tmall-0102-cn.jpg)"></div>
                                 <span class="tag">咖啡品鉴</span>
                                 <strong>咖啡调制</strong>
                             </a>
-                            <a target="_blank" href="#" class="thumbnail rect card">
+                            <a target="_blank" href="/detail" class="thumbnail rect card">
                                 <div class="preview" style="background-image: url(images/starbucks-tmall-0102-cn.jpg)"></div>
                                 <span class="tag">咖啡知识</span>
                                 <strong>咖啡烘焙</strong>
                             </a>
-                            <a target="_blank" href="#" class="thumbnail rect card">
+                            <a target="_blank" href="/detail" class="thumbnail rect card">
                                 <div class="preview" style="background-image: url(images/starbucks-tmall-0102-cn.jpg)"></div>
                                 <span class="tag">咖啡品鉴</span>
                                 <strong>手冲咖啡</strong>
